Fix incompatible types error